fix margins on mobile on nav

--- a/src/components/ArticlePreview.module.scss
+++ b/src/components/ArticlePreview.module.scss
@@ -4,22 +4,24 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
-  max-height: 300px;
+  height: 50vh;
 
   .left_side_preview {
-    flex-basis: 25%;
+    flex-basis: 100%;
     border-radius: 2px;
+    height: 100%;
 
-    img {
+    .preview_image {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
     }
 
     @media screen and (min-width: 744px) {
       flex-basis: 40%;
     }
-
   }
 
   .right_side_preview {
@@ -117,6 +119,7 @@
 
   @media screen and (min-width: 744px) {
     margin-bottom: 26px;
+    height: 30vh;
   }
 
   @media screen and (min-width: 744px) {
