--- a/src/components/Nav.module.scss
+++ b/src/components/Nav.module.scss
@@ -29,10 +29,10 @@ nav {
     a {
       text-decoration: none;
       color: $black-color;
-      font-size: 14px;
+      font-size: 10px;
 
       &:first-of-type {
-        margin-right: 10px;
+        margin-right: 8px;
 
         @media screen and (min-width: 744px) {
           margin-right: 20px;
@@ -54,47 +54,52 @@ nav {
   }
 
   .right_side_nav {
-    .logout_btn {
-      color: $black-color;
-      margin-left: 10px;
-      cursor: pointer;
+    .my_articles_and_create_container {
+      display: flex;
+      align-items: center;
 
-      @media screen and (min-width: 744px) {
-        margin-left: 20px;
-      }
-
-      @media screen and (min-width: 1440px) {
-        margin-left: 40px;
-      }
-    }
-
-    a {
-      text-decoration: none;
-      color: $black-color;
-      font-size: 14px;
-
-      &:nth-of-type(1) {
-        margin-right: 10px;
+      .logout_btn {
+        color: $black-color;
+        margin-left: 10px;
+        cursor: pointer;
 
         @media screen and (min-width: 744px) {
-          margin-right: 20px;
+          margin-left: 20px;
         }
 
         @media screen and (min-width: 1440px) {
-          margin-right: 40px;
+          margin-left: 40px;
         }
       }
 
-      &:nth-of-type(2) {
-        color: $blue-color;
-      }
+      a {
+        text-decoration: none;
+        color: $black-color;
+        font-size: 10px;
 
-      @media screen and (min-width: 744px) {
-        font-size: 15px;
-      }
+        &:nth-of-type(1) {
+          margin-right: 8px;
 
-      @media screen and (min-width: 1440px) {
-        font-size: 16px;
+          @media screen and (min-width: 744px) {
+            margin-right: 20px;
+          }
+
+          @media screen and (min-width: 1440px) {
+            margin-right: 40px;
+          }
+        }
+
+        &:nth-of-type(2) {
+          color: $blue-color;
+        }
+
+        @media screen and (min-width: 744px) {
+          font-size: 15px;
+        }
+
+        @media screen and (min-width: 1440px) {
+          font-size: 16px;
+        }
       }
     }
   }
